--- a/commonHtml/header.html
+++ b/commonHtml/header.html
@@ -700,7 +700,7 @@
 						</div>
 					</li>
 					<li class="InfoC00"><a href="#">预约中心</a></li>
-					<!-- <li class="InfoC00"><a href="#">美力学院</a></li> -->
+					<li class="InfoC00"><a href="jz.html">图书捐赠</a></li>
 				</ul>
 			</div>
 			<!-- <a href="" class="shopping r"><img src="img/index/navigation_shopping.png" /></a> -->
