--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@
 									<div class="brand01name1">清华大学出版社</div>
 									<div class="brand01name2">C语言程序设计</div>
 									<div class="brand01Price">￥40.00/100爱心值</div>
-									<img src="img/index/brand01_spic2.jpg" />
+									<img src="img/index/brand01_spic1.jpg" />
 								</a>
 							</li>
 						</ul>
 					</div>
 					<div class="brand01InfoConentList brandList1 r">
-						<a href="#"><img src="img/index/brand01_img3.jpg"/></a>
+						<a href="#"><img src="img/index/brand01_img2.jpg"/></a>
 						<ul class="brand01InfoProduct">
 							<li>
 								<a href="#">
 									<div class="brand01name1">清华大学出版社</div>
 									<div class="brand01name2">C语言程序设计</div>
 									<div class="brand01Price">￥40.00/100爱心值</div>
-									<img src="img/index/brand01_spic3.jpg" />
+									<img src="img/index/brand01_spic1.jpg" />
 								</a>
 							</li>
 							<li>
@@ -150,7 +150,7 @@
 									<div class="brand01name1">清华大学出版社</div>
 									<div class="brand01name2">C语言程序设计</div>
 									<div class="brand01Price">￥40.00/100爱心值</div>
-									<img src="img/index/brand01_spic4.jpg" />
+									<img src="img/index/brand01_spic1.jpg" />
 								</a>
 							</li>
 						</ul>
@@ -163,7 +163,7 @@
 									<div class="brand01name1">清华大学出版社</div>
 									<div class="brand01name2">C语言程序设计</div>
 									<div class="brand01Price">￥40.00/100爱心值</div>
-									<img src="img/index/brand01_spic5.jpg" />
+									<img src="img/index/brand01_spic1.jpg" />
 								</a>
 							</li>
 							<li>
@@ -171,16 +171,16 @@
 									<div class="brand01name1">清华大学出版社</div>
 									<div class="brand01name2">C语言程序设计</div>
 									<div class="brand01Price">￥40.00/100爱心值</div>
-									<img src="img/index/brand01_spic6.jpg" />
+									<img src="img/index/brand01_spic1.jpg" />
 								</a>
 							</li>
 						</ul>
 					</div>
 					<div class="brand01InfoConentList brandList1 r">
-						<!-- 使用gif格式类型的文件来添加一个动画 
+						
 						<img src="img/index/brand01_gif.gif"/>
-						-->
-						<a href="#"><h1>此处可以用来放置一个动画</h1></a>
+						
+						<a href="#"><h1></h1></a>
 					</div>
 				</ul>
 			</div>
@@ -217,9 +217,9 @@
 			<div class="brand02Footer">
 				<div class="brand02FooterContent c">
 					<!-- 下边的小图片 还没找到-->
-					<ul class="brand02FooterContentBand">
+					<!-- <ul class="brand02FooterContentBand"> -->
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
@@ -253,9 +253,9 @@
 			</div>
 			<div class="brand02Footer">
 				<div class="brand02FooterContent c">
-					<ul class="brand02FooterContentBand">
+					<!-- <ul class="brand02FooterContentBand"> -->
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
@@ -289,9 +289,9 @@
 			</div>
 			<div class="brand02Footer">
 				<div class="brand02FooterContent c">
-					<ul class="brand02FooterContentBand">
+					<!-- <ul class="brand02FooterContentBand"> -->
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
@@ -325,9 +325,9 @@
 			</div>
 			<div class="brand02Footer">
 				<div class="brand02FooterContent c">
-					<ul class="brand02FooterContentBand">
+					<!-- <ul class="brand02FooterContentBand"> -->
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
@@ -361,9 +361,9 @@
 			</div>
 			<div class="brand02Footer">
 				<div class="brand02FooterContent c">
-					<ul class="brand02FooterContentBand">
+					<!-- <ul class="brand02FooterContentBand"> -->
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
@@ -399,7 +399,7 @@
 				<div class="brand02FooterContent c">
 					<ul class="brand02FooterContentBand">
 						<!--<li><a class="l" href=""><img src="img/index/brand_icon2.png"/></a><em class="l"></em></li>-->
-					</ul>
+					<!-- </ul> -->
 				</div>
 			</div>
 		</div>
